--- a/style.css
+++ b/style.css
@@ -901,18 +901,24 @@ h6 {
 Goddess Experience
 /**********/
 
+
 .experience {
   width: 100%;
   font-family: "Cinzel", serif;
-  color: rgb(224, 227, 227);
+  color:  #f18c8e;
   height: auto;
   margin-right: 20%;
-  margin-top: 5%;
+  margin-top: 10%;
   font-size: 1em;
-  color: #343434;
-  margin-bottom: 10%;
+  margin-bottom: 15%;
   padding-bottom: 10px;
   float: left;
+  background-image: url('https://th.bing.com/th/id/OIP.6YRRvcEbll7R_Af827NEswHaE2?pid=ImgDet&rs=1');
+   background-repeat: no-repeat;
+   background-size: 100%;
+    background-position: center;
+  background-attachment: fixed;
+  
 }
 
 @media (min-width: 321px) and (max-width: 600px) {
