--- a/style.css
+++ b/style.css
@@ -187,7 +187,8 @@ clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 79%);
     font-family: "Cinzel", serif;
   font-size: 1em;
   float: right;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
+  color: #f18c8e
 
 }
 
